--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+decouple==0.0.7
 dj-database-url==0.5.0
 Django==4.0.4
 django-heroku==0.3.1
