--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
 psycopg2==2.9.3
+python-decouple==3.6
 requests==2.27.1
 sqlparse==0.4.2
 tzdata==2022.1
